--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: build
 on:
   workflow_call:
   push:
+    branches: [master]
   pull_request:
     branches: [master]
 
@@ -15,7 +16,6 @@ jobs:
         node-version: [14.x]
 
     steps:
-      - name: Install dependencies & build
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
