--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,13 +5,12 @@ on:
     branches: [master]
 
 jobs:
-  use-build:
+  build:
     uses: boojum/11ty-base-blog/.github/workflows/build.yml@master
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v3
